2013-08-27  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Moved to ...
	* bits/socket.h: ... here.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h (enum __socket_type):
	Add SOCK_CLOEXEC, SOCK_NONBLOCK with values from FreeBSD.
	(SOCK_MAX, SOCK_TYPE_MASK): New macros.

2013-08-27  Andreas Schwab  <schwab@suse.de>

	[BZ #15736]
	* locale/categories.def (LC_CTYPE): Add "nonascii-case" element.
	* string/Makefile (test-strcasecmp-ENV, test-strncasecmp-ENV)
	(test-strcasecmp-ifunc-ENV, test-strncasecmp-ifunc-ENV): Define.
	* string/test-strcasecmp.c (test_main): Run tests in several
	locales.
	* string/test-strncasecmp.c (test_main): Likewise.

	* sysdeps/i386/i686/multiarch/strcmp-sse4.S (__strcasecmp_sse4_2)
	(__strncasecmp_sse4_2) [PIC]: Restore %ebx before falling through
	to __strcasecmp_nonascii and __strncasecmp_nonascii.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S (__strcasecmp_ssse3)
	(__strncasecmp_ssse3) [PIC]: Likewise.

2013-08-26  Roland McGrath  <roland@hack.frob.com>

	* io/lxstat64.c: Just call __xstat64, for parity with stub __lxstat.

	* nss/nss_files/files-key.c: Include <rpc/des_crypt.h>
	instead of explicitly declaring xdecrypt.
	* nis/nss_nis/nis-publickey.c: Likewise.

2013-08-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #15890]
	* nscd/aicache.c: Include res_hconf.h.
	(addhstaiX): Initialize res_hconf.

2013-08-26  Andreas Schwab  <schwab@suse.de>

	* stdlib/Makefile (LDFLAGS-tst-tls-atexit): Remove.
	($(objpfx)tst-tls-atexit): Add dependencies here instead.

2013-08-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nscd/aicache.c (addhstaiX): Fix indentation.

2013-08-25  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Quote $build_pt_chown test.
	* configure: Regenerated.

2013-08-23  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15532]
	* math/s_cexp.c (__cexp): Return NaN + i0 for NaN + i0 argument.
	* math/s_cexpf.c (__cexpf): Likewise.
	* math/s_cexpl.c (__cexpl): Likewise.